--- a/src/components/SavedNewsCardList/SavedNewsCardList.css
+++ b/src/components/SavedNewsCardList/SavedNewsCardList.css
@@ -18,5 +18,6 @@
 
   .saved-news-card-list__card-list {
     grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
+    gap: 8px 0;
   }
 }
